Require signing executables

--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -4,10 +4,10 @@ DEVICES:=$(patsubst dev/%.c, $(DESTDIR)/sbin/dev-%, $(wildcard dev/*.c))
 all: $(PROGRAMS) $(DEVICES)
 .SECONDEXPANSION:
 $(DESTDIR)/boot/svfsd: LDFLAGS:=-lmonocypher
-$(PROGRAMS): $$(patsubst %.c, %.o, $$(wildcard $$(notdir $$@)/*.c)) $(patsubst %.key, %.o, $(wildcard public.key))
+$(PROGRAMS): $$(patsubst %.c, %.o, $$(wildcard $$(notdir $$@)/*.c)) public.o
 	$(CC) -s -o $@ $^ $(LDFLAGS)
 $(DEVICES): $(DESTDIR)/sbin/dev-%: dev/%.o
 	$(CC) -s -o $@ $^
-%.o: %.key
+public.o: ../public.key
 	$(OBJCOPY) -O elf64-x86-64 -I binary $^ $@
 -include $(wildcard */*.d)
