--- a/grub.cfg
+++ b/grub.cfg
@@ -3,16 +3,29 @@ set timeout=0
 menuentry "os" {
   multiboot2 /boot/loader.bin
   module2 /boot/acpid acpid
+  module2 /boot/acpid.sig acpid.sig
   module2 /boot/argd argd
+  module2 /boot/argd.sig argd.sig
   module2 /boot/atad atad
+  module2 /boot/atad.sig atad.sig
   module2 /boot/init init
+  module2 /boot/init.sig init.sig
   module2 /boot/ipcd ipcd
+  module2 /boot/ipcd.sig ipcd.sig
   module2 /boot/kernel.bin kernel
+  module2 /boot/kernel.bin.sig kernel.sig
   module2 /boot/lelf lelf
+  module2 /boot/lelf.sig lelf.sig
   module2 /boot/logd logd
+  module2 /boot/logd.sig logd.sig
   module2 /boot/lvmd lvmd
+  module2 /boot/lvmd.sig lvmd.sig
   module2 /boot/mbrd mbrd
+  module2 /boot/mbrd.sig mbrd.sig
   module2 /boot/pcid pcid
+  module2 /boot/pcid.sig pcid.sig
   module2 /boot/svfsd svfsd
+  module2 /boot/svfsd.sig svfsd.sig
   module2 /boot/vfsd vfsd
+  module2 /boot/vfsd.sig vfsd.sig
 }
