Add .DELETE_ON_ERROR: to makefiles

--- a/coreutils/Makefile
+++ b/coreutils/Makefile
@@ -3,3 +3,4 @@ PROGRAMS:=$(patsubst %.c, $(DESTDIR)/bin/%, $(wildcard *.c))
 all: $(PROGRAMS)
 $(PROGRAMS): $(DESTDIR)/bin/%: %.o
 	$(CC) -s -o $@ $^
+.DELETE_ON_ERROR:
