--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -1,7 +1,7 @@
 CFLAGS+=--target=i686-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
 ASFLAGS+=--target=i686-elf
 
-LIBC:=$(patsubst %.c, %.o, $(wildcard libc/*/*.c) $(wildcard libc/arch/generic/*.c))
+LIBC:=$(patsubst %.c, %.o, $(filter-out $(wildcard libc/math/*.c), $(wildcard libc/*/*.c)) $(wildcard libc/arch/generic/*.c))
 SFILES:=$(wildcard cpu/*.s)
 CFILES:=main.c $(wildcard */*.c)
 OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES)) public.o
