Fix running under UEFI with grub

--- a/grub.cfg
+++ b/grub.cfg
@@ -1,6 +1,7 @@
 set timeout=0
 
 menuentry "os" {
+  insmod all_video
   multiboot2 /boot/loader.bin
   module2 /boot/acpid acpid
   module2 /boot/acpid.sig acpid.sig
