--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -1,7 +1,7 @@
 LIBRARIES:=$(DESTDIR)/lib/libmonocypher.a
 
 install: $(LIBRARIES)
-	cp -r include $(DESTDIR)
+	cp -rp include $(DESTDIR)
 .SECONDEXPANSION:
 $(LIBRARIES): $$(patsubst %.c, %.o, $$(wildcard $$(patsubst $(DESTDIR)/lib/lib%.a, %, $$@)/*.c))
 	$(AR) rcD $@ $^
