--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,4 @@
-CFLAGS+=--target=x86_64-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -mretpoline -mcmodel=kernel -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
+CFLAGS+=--target=x86_64-elf -ffreestanding -fstack-protector-strong -mretpoline -mcmodel=kernel -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
 ASFLAGS+=--target=x86_64-elf
 
 LIBC:=$(patsubst %.c, %.o, $(filter-out $(wildcard libc/math/*.c), $(wildcard libc/*/*.c))) $(patsubst %.s, %.o, $(wildcard libc/arch/x86_64/*.s))
@@ -7,8 +7,10 @@ CFILES:=main.c $(wildcard */*.c) $(wildcard sys/syscall/*.c)
 OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES)) public.o
 
 $(LIBC): CFLAGS+=-fno-builtin
-$(DESTDIR)/boot/kernel.bin: $(OFILES) $(LIBC)
+$(DESTDIR)/boot/kernel.bin: $(OFILES) libc.a
 	$(CC) --target=x86_64-$(LDTARGET) -fuse-ld=lld -static -nostdlib -s -T link.ld -o $@ $^
+libc.a: $(LIBC)
+	$(AR) rcD $@ $(LIBC)
 public.o: ../public.key
 	$(OBJCOPY) -O elf64-x86-64 -I binary $^ $@
 -include $(OFILES:.o=.d)
