--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -1,4 +1,4 @@
-CFLAGS+=--target=i686-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
+CFLAGS+=--target=i686-elf -ffreestanding -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
 ASFLAGS+=--target=i686-elf
 
 LIBC:=$(patsubst %.c, %.o, $(filter-out $(wildcard libc/math/*.c), $(wildcard libc/*/*.c)) $(wildcard libc/arch/generic/*.c))
@@ -7,8 +7,10 @@ CFILES:=main.c $(wildcard */*.c)
 OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES)) public.o
 
 $(LIBC): CFLAGS+=-fno-builtin
-$(DESTDIR)/boot/loader.bin: $(OFILES) $(LIBC)
+$(DESTDIR)/boot/loader.bin: $(OFILES) libc.a
 	$(CC) --target=i686-$(LDTARGET) -fuse-ld=lld -static -nostdlib -s -T link.ld -o $@ $^
+libc.a: $(LIBC)
+	$(AR) rcD $@ $(LIBC)
 public.o: ../public.key
 	$(OBJCOPY) -O elf32-i386 -I binary $^ $@
 -include $(OFILES:.o=.d)
