--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: make toolchain
       - name: Clean toolchain directory
         run: make clean
-  multiboot:
+  build:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-11]
@@ -39,7 +39,7 @@ jobs:
     steps:
       - name: Install dependencies
         if: ${{ matrix.os == 'ubuntu-20.04' }}
-        run: sudo apt-get update && sudo apt-get install -y qemu-system-x86
+        run: sudo apt-get update && sudo apt-get install -y qemu-system-x86 mtools
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -81,6 +81,9 @@ jobs:
     runs-on: ubuntu-20.04
     needs: toolchain
     steps:
+      - name: Install dependencies
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
+        run: sudo apt-get update && sudo apt-get install -y mtools
       - name: Checkout
         uses: actions/checkout@v2
         with:
