--- a/libc/Makefile
+++ b/libc/Makefile
@@ -2,7 +2,7 @@ CFLAGS+=-ffreestanding
 
 CFILES:=$(wildcard freestanding/*/*.c) $(wildcard */*.c) $(wildcard freestanding/arch/x86_64/*.c)
 SFILES:=$(wildcard freestanding/arch/x86_64/*.s) $(wildcard */*.s)
-OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES))
+OFILES:=$(CFILES:.c=.o) $(SFILES:.s=.o)
 
 install: $(DESTDIR)/lib/libc.a crt0.o
 	cp crt0.o $(DESTDIR)/lib
@@ -12,6 +12,6 @@ $(DESTDIR)/lib/libc.a: $(OFILES)
 install-headers:
 	mkdir -p $(DESTDIR)/include/__/freestanding
 	cp -rp include $(DESTDIR)
-	cp -p freestanding/include/*.h $(DESTDIR)/include/__/freestanding
+	cp -rp freestanding/include/* $(DESTDIR)/include/__/freestanding
 -include $(OFILES:.o=.d)
 .DELETE_ON_ERROR:
