--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -1,16 +1,15 @@
-CFLAGS+=--target=i686-elf -ffreestanding -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include
+export ARCH=i686
+CFLAGS+=--target=i686-elf -ffreestanding -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include -D__FLIBC_NO_FLOAT__
 ASFLAGS+=--target=i686-elf
 
-LIBC:=$(patsubst %.c, %.o, $(filter-out $(wildcard libc/math/*.c), $(wildcard libc/*/*.c)) $(wildcard libc/arch/generic/*.c))
 SFILES:=$(wildcard cpu/*.s)
 CFILES:=main.c $(wildcard */*.c)
-OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES)) public.o
+OFILES:=$(CFILES:.c=.o) $(SFILES:.s=.o) public.o
 
-$(LIBC): CFLAGS+=-fno-builtin
-$(DESTDIR)/boot/loader.bin: $(OFILES) libc.a
+$(DESTDIR)/boot/loader.bin: $(OFILES) libc/libc.a
 	$(CC) --target=i686-$(LDTARGET) -fuse-ld=lld -static -nostdlib -s -T link.ld -o $@ $^
-libc.a: $(LIBC)
-	$(AR) rcD $@ $(LIBC)
+libc/libc.a:
+	$(MAKE) -Clibc
 public.o: ../public.key
 	$(OBJCOPY) -O elf32-i386 -I binary $^ $@
 -include $(OFILES:.o=.d)
