--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,5 +1,5 @@
 export ARCH=x86_64
-CFLAGS+=--target=x86_64-elf -ffreestanding -fstack-protector-strong -mretpoline -mcmodel=kernel -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include -D__FLIBC_NO_FLOAT__
+CFLAGS+=--target=x86_64-elf -ffreestanding -fstack-protector-strong -mretpoline -mcmodel=kernel -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include -Ilibelf -D__FLIBC_NO_FLOAT__
 ASFLAGS+=--target=x86_64-elf
 
 SFILES:=$(wildcard cpu/*.s)
@@ -14,3 +14,4 @@ public.o: ../public.key
 	$(OBJCOPY) -O elf64-x86-64 -I binary $^ $@
 -include $(OFILES:.o=.d)
 .DELETE_ON_ERROR:
+.PHONY: libc/libc.a
