--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -1,5 +1,5 @@
 export ARCH=i686
-CFLAGS+=--target=i686-elf -ffreestanding -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include -D__FLIBC_NO_FLOAT__
+CFLAGS+=--target=i686-elf -ffreestanding -fstack-protector-strong -mretpoline -mno-mmx -mno-sse -flto -fvisibility=hidden -fsanitize=cfi -fbuiltin -Ilibc/include -Ilibelf -D__FLIBC_NO_FLOAT__
 ASFLAGS+=--target=i686-elf
 
 SFILES:=$(wildcard cpu/*.s)
@@ -14,3 +14,4 @@ public.o: ../public.key
 	$(OBJCOPY) -O elf32-i386 -I binary $^ $@
 -include $(OFILES:.o=.d)
 .DELETE_ON_ERROR:
+.PHONY: libc/libc.a
