--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -5,7 +5,7 @@ all: $(PROGRAMS) $(DEVICES)
 .SECONDEXPANSION:
 $(DESTDIR)/boot/svfsd: LDFLAGS:=-lmonocypher
 $(PROGRAMS): $$(patsubst %.c, %.o, $$(wildcard $$(notdir $$@)/*.c)) public.o
-	$(CC) -s -o $@ $^ $(LDFLAGS)
+	$(CC) -s -o $@ $^ $(LDFLAGS) -lds
 $(DEVICES): $(DESTDIR)/sbin/dev-%: dev/%.o
 	$(CC) -s -o $@ $^
 public.o: ../public.key
